[gd_scene load_steps=14 format=2]

[ext_resource path="res://weapon/EnemySword.tscn" type="PackedScene" id=1]
[ext_resource path="res://actor/enemy/Enemy.gd" type="Script" id=2]
[ext_resource path="res://actor/enemy/EnemyState.gd" type="Script" id=3]
[ext_resource path="res://actor/enemy/enemy.png" type="Texture" id=4]
[ext_resource path="res://box/HitBox.tscn" type="PackedScene" id=5]
[ext_resource path="res://hud/EnemyStats.tscn" type="PackedScene" id=6]
[ext_resource path="res://effect/light/light_only.tres" type="Material" id=8]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.0
height = 8.0

[sub_resource type="CircleShape2D" id=2]
radius = 33.1361

[sub_resource type="Animation" id=3]
length = 0.6
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}

[sub_resource type="Animation" id=5]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 6, 7 ]
}

[sub_resource type="CapsuleShape2D" id=6]
radius = 5.0
height = 8.0

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 14
script = ExtResource( 2 )

[node name="EnemyState" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
material = ExtResource( 8 )
scale = Vector2( -1, 1 )
texture = ExtResource( 4 )
hframes = 9

[node name="FloorDetector" type="RayCast2D" parent="Sprite"]
position = Vector2( 9, 11 )
enabled = true
cast_to = Vector2( 0, 16 )
collision_mask = 8

[node name="Sword" parent="." instance=ExtResource( 1 )]
position = Vector2( -2.27374e-13, 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 2 )
shape = SubResource( 1 )

[node name="PlayerDetector" type="Area2D" parent="."]
visible = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2( 0, -10 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 3 )
anims/jump = SubResource( 4 )
anims/run = SubResource( 5 )

[node name="HitBox" parent="." instance=ExtResource( 5 )]
visible = false
collision_mask = 6

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( 0, 2 )
shape = SubResource( 6 )

[node name="HealthBar" parent="." instance=ExtResource( 6 )]
visible = false
margin_top = -12.0
margin_bottom = 4.0

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( -0.5, 1.5 )
scale = Vector2( 0.65, 0.95 )
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_PlayerDetector_body_exited"]
[connection signal="hit" from="HitBox" to="." method="_on_HitBox_hit"]

[editable path="HitBox"]
